@@ -22,6 +22,13 @@ documents those changes that are of interest to users and administrators.
     uint16_t to ensure all current flags are saved correctly. Older releases
     unfortunately could not store details for newer flags (using bits 17-32)
     due to this field being silently truncated.
+ -- Modify task layout with --overcommit option plus a heterogeneous job
+    allocation so that a cyclic task distribution can start happening before
+    all CPUs on all nodes are fully allocated. The number of tasks per node
+    will be unchanged from the previous algorithm, but tasks will be distributed
+    in a cyclic fashion first and then extra tasks placed on nodes with more
+    CPUs. Previously all CPUs would be fully allocated in a cyclic fashion,
+    then excess tasks distributed evenly across all allocated nodes.
 
 * Changes in Slurm 19.05.0rc1
 =============================
